tests/baselines/reference/classCannotExtendVar.errors.txt
classCannotExtendVar.ts(1,5): error TS2300: Duplicate identifier 'Markup'.
classCannotExtendVar.ts(3,7): error TS2300: Duplicate identifier 'Markup'.


==== classCannotExtendVar.ts (2 errors) ====
    var Markup;
        ~~~~~~
!!! error TS2300: Duplicate identifier 'Markup'.
    
    class Markup {
          ~~~~~~
!!! error TS2300: Duplicate identifier 'Markup'.
        constructor() {
        }
    }
    